--- a/demo/character.html
+++ b/demo/character.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 
 <style>
+.form {
+    width: 500px;
+    margin: auto;
+}
 .role-setting + .role-setting {
     margin-top: 16px;
 }
@@ -29,33 +33,31 @@
     padding-top: 16px;
     border-top: 1px solid #dedede;
 }
+.message::after {
+    content: '';
+    display: block;
+    clear: both;
+}
 .role {
     font-weight: 500;
 }
-.delete {
-    margin-left: 16px;
+.action-btns {
+    white-space: pre;
+    clear: both;
+}
+.action-btn {
+    margin-right: 16px;
+    font-size: .8em;
 }
 
 .add-message {
-    margin-top: 60px;
-    width: 500px;
+    margin-top: 20px;
+    border-top: 1px solid #dedede;
+    padding-top: 20px;
 }
 .add-message h5 {
     display: flex;
     align-items: center;
-}
-.add-message .toggle-btn {
-    display: block;
-    border: 1px solid #115ae1;
-    width: 1.3em;
-    height: 1.3em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    font-size: 1.2em;
-    color: #115ae1;
-    cursor: pointer;
 }
 .add-role select {
     width: 100px;
@@ -69,12 +71,18 @@
 .add-message button {
     float: right;
 }
+.add-msg-btn {
+    padding: 4px 60px;
+    cursor: pointer;
+}
 
 .continues {
     margin-top: 60px;
 }
 .primary-btn {
-    padding: 12px 50px;
+    width: 100%;
+    padding: 12px 0;
+    text-align: center;
     border: 0;
     background-color: rgb(31, 97, 221);
     color: #fff;
@@ -83,6 +91,9 @@
 .primary-btn:active {
     opacity: .8;
 }
+.primary-btn:disabled {
+    opacity: .5;
+}
 .continues textarea {
     display: block;
     width: calc(100% - 16px);
@@ -90,16 +101,46 @@
     padding: 4px 8px;
     margin: 8px 0;
 }
+.continues small {
+    display: block;
+    text-align: center;
+}
+
+.toggle-btn {
+    display: block;
+    border: 1px solid #115ae1;
+    width: 1.3em;
+    height: 1.3em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    font-size: 1.2em;
+    color: #115ae1;
+    cursor: pointer;
+}
+
+.role-area h3 {
+    display: flex;
+    align-items: center;
+    gap: .5em;
+}
 </style>
 
 <div class="form" id="root">
-    <div class="role-setting">
-        <div>角色1称呼: <input name="bot_name" v-model="botName" /></div>
-        <div>角色1人设: <textarea name="bot_info" v-model="botInfo"></textarea></div>
-    </div>
-    <div class="role-setting">
-        <div>角色2称呼: <input name="user_name" v-model="userName" /></div>
-        <div>角色2人设: <textarea name="user_info" v-model="userInfo"></textarea></div>
+    <div class="role-area">
+        <h3>
+            <span>人物设定</span>
+            <span class="toggle-btn" @click="handleToggleRole">{{ isShowRoleArea ? '-' : '+'}}</span>
+        </h3>
+        <div class="role-setting" v-if="isShowRoleArea">
+            <div>角色1称呼: <input name="bot_name" v-model="botName" /></div>
+            <div>角色1人设: <textarea name="bot_info" v-model="botInfo"></textarea></div>
+        </div>
+        <div class="role-setting" v-if="isShowRoleArea">
+            <div>角色2称呼: <input name="user_name" v-model="userName" /></div>
+            <div>角色2人设: <textarea name="user_info" v-model="userInfo"></textarea></div>
+        </div>
     </div>
     <div>
         <div class="message-list">
@@ -107,34 +148,31 @@
                 <span v-if="item.role === 'assistant'" class="role">{{ botName || '角色1' }}：</span>
                 <span v-if="item.role === 'user'" class="role">{{ userName || '角色2' }}：</span>
                 <span class="content">{{ item.content }}</span>
-                <a href="javascript:void(0)" @click="messages.splice(index,1)" class="delete">删除</a>
+                <span class="action-btns">
+                    <a href="javascript:void(0)" @click="messages.splice(index,1)" class="action-btn">删除</a>
+                    <a href="javascript:void(0)" @click="isShowContinueIndex = isShowContinueIndex === index ? -1 : index" class="action-btn">补充剧情</a>
+                </span>
+                <div class="add-message" v-if="isShowContinueIndex === index">
+                    <div class="add-role">
+                        <label>
+                            <span>角色：</span>
+                            <select v-model="currentRole">
+                                <option v-for="option in roleTypes" :value="option.value" :selected="currentRole === option.value">{{ option.label }}</option>
+                            </select>
+                        </label>
+                    </div>
+                    <div class="add-script">
+                        <span>脚本：</span><br />
+                        <textarea v-model="currentContent" placeholder="旁白或心理活动用括号括起来"></textarea>
+                    </div>
+                    <button @click="handleAddMessage(index)" class="add-msg-btn">补充</button>
+                </div>
             </div>
-        </div>
-        <div class="add-message">
-            <h5>
-                <span>补充剧情：（剧情必须由角色1先开始，旁白或心理活动用括号括起来）</span>
-                <span v-if="!isShowContinue" @click="isShowContinue = true" class="toggle-btn">+</span>
-                <span v-if="isShowContinue" @click="isShowContinue = false" class="toggle-btn">-</span>
-            </h5>
-            <div class="add-role" v-if="isShowContinue">
-                <label>
-                    <span>角色：</span>
-                    <select v-model="currentRole">
-                        <option v-for="option in roleTypes" :value="option.value" :selected="currentRole === option.value">{{ option.label }}</option>
-                    </select>
-                </label>
-            </span>
-            <div class="add-script" v-if="isShowContinue">
-                <span>脚本：</span><br />
-                <textarea v-model="currentContent"></textarea>
-            </div>
-            <button @click="handleAddMessage">补充</button>
         </div>
     </div>
     <div class="continues">
-        <span>{{ userName || '角色2' }}：</span>
-        <textarea v-model="userContinuesContent"></textarea>
-        <button class="primary-btn" @click="handleContinueCharacter">开始续写</button>
+        <button class="primary-btn" @click="handleContinueCharacter" :disabled="isWriting">开始续写{{ botName || '角色1' }}</button>
+        <small>续写会以{{ botName || '角色1' }}的视角进行，可以通过<a href="javascript:void(0)" @click="handleChangeRole">角色互换</a>来切换到{{ userName || '角色2' }}视角来续写</small>
     </div>
 </div>
 
@@ -215,6 +253,10 @@
                     "role": "assistant",
                     "content": "好的，导演。（充满信心的眼神）"
                 },
+                {
+                    "role": "user",
+                    "content": "那就麻烦苏梦远你先准备一下，我们再试一次吧。"
+                },
             ]);
 
             const roleTypes = computed(() => [
@@ -227,28 +269,44 @@
                     value: 'user',
                 },
             ]);
-            const isShowContinue = ref(false);
-            const currentRole = ref('assistant');
+            const isShowContinueIndex = ref(-1);
+            const currentRole = ref('user');
             const currentContent = ref('');
+            const isWriting = ref(false);
+            const isShowRoleArea = ref(true);
 
-            const userContinuesContent = ref('');
-
-            const handleAddMessage = () => {
+            const handleAddMessage = (index) => {
                 const role = currentRole.value;
                 const content = currentContent.value;
-                messages.value.push({ role, content });
-                currentRole.value = 'assistant';
+                messages.value.splice(index + 1, 0, { role, content });
+                currentRole.value = 'user';
                 currentContent.value = '';
+                isShowContinueIndex.value += 1;
+            };
+
+            const handleChangeRole = () => {
+                const user_name = userName.value;
+                const user_info = userInfo.value;
+                const bot_name = botName.value;
+                const bot_info = botInfo.value;
+                const list = messages.value;
+
+                userName.value = bot_name;
+                userInfo.value = bot_info;
+                botName.value = user_name;
+                botInfo.value = user_info;
+
+                const roleMap = {
+                    assistant: 'user',
+                    user: 'assistant',
+                };
+                messages.value.forEach((item) => {
+                    const { role } = item;
+                    item.role = roleMap[role];
+                });
             };
 
             const handleContinueCharacter = async () => {
-                if (userContinuesContent.value.trim()) {
-                    messages.value.push({
-                        role: 'user',
-                        content: userContinuesContent.value,
-                    });
-                }
-
                 const prompt = messages.value;
                 const meta = {
                     user_name: userName.value,
@@ -256,6 +314,8 @@
                     bot_name: botName.value,
                     bot_info: botInfo.value,
                 };
+
+                isWriting.value = true;
                 const res = await fetch('/character', {
                     method: 'POST',
                     body: JSON.stringify({ prompt, meta }),
@@ -285,12 +345,17 @@
                             }
                             return text;
                         }, '');
-                        console.log(chunks);
                         nextTick(() => {
                             newMessage.content = content;
+                            isWriting.value = false;
+                            handleChangeRole();
                         });
                     },
                 });
+            };
+
+            const handleToggleRole = () => {
+                isShowRoleArea.value = !isShowRoleArea.value;
             };
 
             return {
@@ -302,10 +367,13 @@
                 roleTypes,
                 currentRole,
                 currentContent,
-                isShowContinue,
+                isShowContinueIndex,
+                isWriting,
                 handleAddMessage,
-                userContinuesContent,
                 handleContinueCharacter,
+                handleChangeRole,
+                isShowRoleArea,
+                handleToggleRole,
             };
         },
     });
